--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>My Favorite Things</title>
+</head>
+<body>
+    <div id="container">
+        <header>
+            <div id="navbar">
+                <a href="#movies">Movies</a>
+                <a href="#colors">Colors</a>
+                <a href="#albums">Albums</a>
+                <a href="#games">Games</a>    
+            </div>
+            <iframe src="https://www.youtube.com/watch?v=l93XuwgBAzc&list=RDl93XuwgBAzc&start_radio=1"></iframe>
+        </header>
+        <main class="content">
+            <section id="movies">
+               <h2>My Favorite Movies</h2>     
+               <ol>
+                   <li>Comet</li>
+                   <li>Hitman</li>
+                   <li>Other movie</li>
+                   <li>Other movie</li>
+                   <li>Other movie</li>
+               </ol>
+            </section>    
+            
+            <h2>My Favorite Colors</h2>
+            <section id="colors">
+                <h3 class="black">Black</h3>
+                <h3 class="red">Red</h3>
+                <h3 class="pink">Pink</h3>
+                <h3 class="gray">Gray</h3>
+                <h3 class="green">Green</h3>
+                <h3 class="orange">Orange</h3>
+            </section>
+
+            <h2>My Favorite Games</h2>
+            <section id="games">
+                <img class="CyberPunk" src="https://en.wikipedia.org/wiki/Cyberpunk_2077#/media/File:Cyberpunk_2077_box_art.jpg" alt="">
+                <img class="CyberPunk" src="https://en.wikipedia.org/wiki/Cyberpunk_2077#/media/File:Cyberpunk_2077_box_art.jpg" alt="">
+                <img class="CyberPunk" src="https://en.wikipedia.org/wiki/Cyberpunk_2077#/media/File:Cyberpunk_2077_box_art.jpg" alt="">
+                <img class="CyberPunk" src="https://en.wikipedia.org/wiki/Cyberpunk_2077#/media/File:Cyberpunk_2077_box_art.jpg" alt="">
+                <img class="CyberPunk" src="https://en.wikipedia.org/wiki/Cyberpunk_2077#/media/File:Cyberpunk_2077_box_art.jpg" alt="">
+                <img class="CyberPunk" src="https://en.wikipedia.org/wiki/Cyberpunk_2077#/media/File:Cyberpunk_2077_box_art.jpg" alt="">
+                <img class="CyberPunk" src="https://en.wikipedia.org/wiki/Cyberpunk_2077#/media/File:Cyberpunk_2077_box_art.jpg" alt="">
+                <img class="CyberPunk" src="https://en.wikipedia.org/wiki/Cyberpunk_2077#/media/File:Cyberpunk_2077_box_art.jpg" alt="">
+                <!-- <img class="skyrim" src="www." alt=""> -->
+            </section>
+        </main>
+        <footer id="footer">
+            <h2>Blackblahblah</h2>
+        </footer>
+    </div>
+
+</body>
+</html>
