--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&family=Montserrat:wght@300&family=Roboto&display=swap" rel="stylesheet">
 </head>
 
+<nav class="navbar">
+    <div>
+        <a class="home" href="#top-container">Home</a>
+        <a href="#projects">Projects</a>
+        <a href="#skills">Skills</a>
+    </div>
+  </nav>
+
 <body>
   <div class="top-container">
     <h1>I'm Gian.</h1>
