testing changes stuck

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <div class="skill-row">
         <img class="cigar"src="https://cdn-icons-png.flaticon.com/512/6776/6776511.png" alt="cigar-pic">
         <h3>Cigar Aficionado</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
-</div>
+        <p>Lom.</p>
+      </div>
 
 
       </div>
@@ -59,12 +59,14 @@
     </div>
   </div>
 
+  <div>
+      <a href="#" class="fakerbutton">Learn more</a>
+  </div>
+
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/gian-ramirez-dev/">LinkedIn</a>
     <p class="my-cert">©2022 Gian Ramirez.</p>
-    <a href="https://www.flaticon.com/free-icons/miscellaneous" title="miscellaneous icons">Miscellaneous icons created by Freepik - Flaticon</a>
-    <a href="https://www.flaticon.com/free-icons/video-game" title="video game icons">Video game icons created by alfanz - Flaticon</a></p>
 
   </div>
 </body>
