--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="top-container">
             <nav class="navbar">
                 <ul class="header__nav_list">
-                    <li class="nav__aboutme"><a href="#profile">About Me</a></li>
-                    <li class="nav__skills"><a href="#skills">Skills</a></li>
-                    <li class="nav__projects"><a href="#projects">Projects</a></li>
-                    <li class="nav__getintouch"><a href="#getInTouch">Get in Touch</a></li>
+                    <li class="nav__aboutme"><a href="#profile" class="links">About Me</a></li>
+                    <li class="nav__skills"><a href="#skills" class="links">Skills</a></li>
+                    <li class="nav__projects"><a href="#projects" class="links">Projects</a></li>
+                    <li class="nav__getintouch"><a href="#getInTouch" class="links">Get in Touch</a></li>
                 </ul>
             </nav>
             <div class="top-row">
